# coursework2

./: CMakeLists.txt
cmake/: definitions.cmake  include_directories.cmake  libraries.cmake  sources.cmake  system.cmake  util.cmake
resources/shaders/: flame.frag.spv  flame.vert.spv  static_mesh.frag.spv  static_mesh.vert.spv
src/: abstractmesh.cpp  abstractmesh.h  abstractrenderer.cpp  abstractrenderer.h  actor.cpp  actor.h  actorcontroller.cpp  actorcontroller.h  camera.cpp  camera.h  device.cpp  device.h  devicebuffer.cpp  devicebuffer.h  flame.cpp  flame.h  initialize.h  key.h  main.cpp  messagebox.h  mousebutton.h  particle.h  renderer.cpp  renderer.h  scenegraph.cpp  scenegraph.h  scenegraphvisitor.h  scenenode.cpp  scenenode.h  staticmesh.cpp  staticmesh.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  ui.h  vkassert.cpp  vkassert.h  (+3 more)
src/darwin/: appdelegate.h  appdelegate.mm  initialize.mm  messagebox.mm  ui.mm  vulkanview.h  vulkanview.mm  window.mm  windowdelegate.h  windowdelegate.mm
src/detail/: actorscontainer.cpp  actorscontainer.h  cameraselector.cpp  cameraselector.h  cameraselectorvisitor.cpp  cameraselectorvisitor.h  materialcounter.cpp  materialcounter.h  materialcountervisitor.cpp  materialcountervisitor.h  meshselector.cpp  meshselector.h  meshselectorvisitor.cpp  meshselectorvisitor.h  staticmeshescontainer.h  staticmeshescounter.cpp
src/shaders/: flame.frag  flame.vert  static_mesh.frag  static_mesh.vert
src/windows/: initialize.cpp  messagebox.cpp  ui.cpp  window.cpp
(+7 files in other folders)
